--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -1,19 +1,10 @@
-.categ-flex-frame { position: relative; left: -3px; display: flex; flex-wrap: wrap; }
+.categ-flex-frame { position: relative; left: -3px; display: flex; flex-wrap: wrap; border-radius: 15px; -moz-border-radius: 15px; -webkit-border-radius: 15px; overflow: hidden; }
 .categ-flex-frame .tile  { position: relative; flex-basis: calc(25% - 6px); margin: 3px; box-sizing: border-box; cursor: pointer; overflow: hidden; }
 .categ-flex-frame .tile::before { content: ''; display: block; padding-top: 100%; }
 .categ-flex-frame .color { position: absolute;  top: 0; left: 0; width: 100%; height: 100%; padding: 15px 15px 20px 20px; overflow: hidden;  }
 .categ-flex-frame .color .categ h2 { color: var(--white); font-family: 'avenir-bold'; font-size: 26px; overflow: hidden; }
 .categ-flex-frame .color .subjects{ position: absolute; bottom: 0; right: 0; white-space: nowrap;  max-width: 100%; text-align: right; padding: 20px;  }
 .categ-flex-frame .color .subjects h3 { color: var(--white); font-family: 'montserrat'; font-size: 22px; font-weight: 100 !important;  overflow: hidden; text-overflow: ellipsis; }
-
-.categ-flex-frame .tile:first-of-type { border-top-left-radius: 10px; -moz-border-top-left-radius: 10px; -webkit-border-top-left-radius: 10px; }
-.categ-flex-frame .color:first-of-type { border-top-left-radius: 10px; -moz-border-top-left-radius: 10px; -webkit-border-top-left-radius: 10px; }
-.categ-flex-frame .tile:nth-of-type(4) { border-top-right-radius: 10px; -moz-border-top-right-radius: 10px; -webkit-border-top-right-radius: 10px; }
-.categ-flex-frame .color:nth-of-type(4) { border-top-right-radius: 10px; -moz-border-top-right-radius: 10px; -webkit-border-top-right-radius: 10px; }
-.categ-flex-frame .tile:nth-of-type(21) { border-bottom-left-radius: 10px; -moz-border-bottom-left-radius: 10px; -webkit-border-bottom-left-radius: 10px; }
-.categ-flex-frame .color:nth-of-type(21) { border-bottom-left-radius: 10px; -moz-border-bottom-left-radius: 10px; -webkit-border-bottom-left-radius: 10px; }
-.categ-flex-frame .tile:last-of-type { border-bottom-right-radius: 10px; -moz-border-bottom-right-radius: 10px; -webkit-border-bottom-right-radius: 10px; }
-.categ-flex-frame .color:last-of-type { border-bottom-right-radius: 10px; -moz-border-bottom-right-radius: 10px; -webkit-border-bottom-right-radius: 10px; }
 
 .categ-flex-frame .color-gray { background: rgb(120, 120, 120, 0.6); }
 .categ-flex-frame .tile-gray { cursor: default; }
@@ -97,17 +88,6 @@ MAX 900
 	.categ-flex-frame .tile  { flex-basis: calc(33.33333% - 6px); }
 	.categ-flex-frame .color .categ h2 { font-size: 3vw; }
 	.categ-flex-frame .color .subjects h3 { font-size: 2.5vw; }
-	
-	.categ-flex-frame .tile:first-of-type { border-radius: 0; -moz-border-radius: 0; -webkit-border-radius: 0; }
-	.categ-flex-frame .color:first-of-type { border-top-left-radius: 10px; -moz-border-top-left-radius: 10px; -webkit-border-top-left-radius: 10px; }
-	.categ-flex-frame .tile:first-of-type { border-top-left-radius: 10px; -moz-border-top-left-radius: 10px; -webkit-border-top-left-radius: 10px; }
-	.categ-flex-frame .color:first-of-type { border-top-left-radius: 10px; -moz-border-top-left-radius: 10px; -webkit-border-top-left-radius: 10px; }
-	.categ-flex-frame .tile:nth-of-type(3) { border-top-right-radius: 10px; -moz-border-top-right-radius: 10px; -webkit-border-top-right-radius: 10px; }
-	.categ-flex-frame .color:nth-of-type(3) { border-top-right-radius: 10px; -moz-border-top-right-radius: 10px; -webkit-border-top-right-radius: 10px; }
-	.categ-flex-frame .tile:nth-of-type(22) { border-bottom-left-radius: 10px; -moz-border-bottom-left-radius: 10px; -webkit-border-bottom-left-radius: 10px; }
-	.categ-flex-frame .color:nth-of-type(22) { border-bottom-left-radius: 10px; -moz-border-bottom-left-radius: 10px; -webkit-border-bottom-left-radius: 10px; }
-	.categ-flex-frame .tile:last-of-type { border-bottom-right-radius: 10px; -moz-border-bottom-right-radius: 10px; -webkit-border-bottom-right-radius: 10px; }
-	.categ-flex-frame .color:last-of-type { border-bottom-right-radius: 10px; -moz-border-bottom-right-radius: 10px; -webkit-border-bottom-right-radius: 10px; }
 }
 
 /**************************************
@@ -117,15 +97,4 @@ MAX 680
 	.categ-flex-frame .tile  { flex-basis: calc(50% - 6px); }
 	.categ-flex-frame .color .categ h2 { font-size: 4.2vw; }
 	.categ-flex-frame .color .subjects h3 { font-size: 3.8vw; }
-	
-	.categ-flex-frame .tile:first-of-type { border-radius: 0; -moz-border-radius: 0; -webkit-border-radius: 0; }
-	.categ-flex-frame .color:first-of-type { border-top-left-radius: 10px; -moz-border-top-left-radius: 10px; -webkit-border-top-left-radius: 10px; }
-	.categ-flex-frame .tile:first-of-type { border-top-left-radius: 10px; -moz-border-top-left-radius: 10px; -webkit-border-top-left-radius: 10px; }
-	.categ-flex-frame .color:first-of-type { border-top-left-radius: 10px; -moz-border-top-left-radius: 10px; -webkit-border-top-left-radius: 10px; }
-	.categ-flex-frame .tile:nth-of-type(2) { border-top-right-radius: 10px; -moz-border-top-right-radius: 10px; -webkit-border-top-right-radius: 10px; }
-	.categ-flex-frame .color:nth-of-type(2) { border-top-right-radius: 10px; -moz-border-top-right-radius: 10px; -webkit-border-top-right-radius: 10px; }
-	.categ-flex-frame .tile:nth-of-type(23) { border-bottom-left-radius: 10px; -moz-border-bottom-left-radius: 10px; -webkit-border-bottom-left-radius: 10px; }
-	.categ-flex-frame .color:nth-of-type(23) { border-bottom-left-radius: 10px; -moz-border-bottom-left-radius: 10px; -webkit-border-bottom-left-radius: 10px; }
-	.categ-flex-frame .tile:last-of-type { border-bottom-right-radius: 10px; -moz-border-bottom-right-radius: 10px; -webkit-border-bottom-right-radius: 10px; }
-	.categ-flex-frame .color:last-of-type { border-bottom-right-radius: 10px; -moz-border-bottom-right-radius: 10px; -webkit-border-bottom-right-radius: 10px; }
 }
