--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -5,9 +5,11 @@
   --grey-2: #c5c4c4;		
   --grey-3: #959494;		
   --blue-dark: #29295e;
+  --blue-dark-dark: #20204b;
   --blue-medium: #3e3e6d;
   --blue-medium-dark: #50517a;
   --blue-light: #249ad1;
+  --blue-light-dark: #208abc;
   --blue-pale: #93d2ef;
   --yellow: #ffc107;
   --yellow-light: #fcf2d3;
@@ -15,21 +17,24 @@
   --red-light: #fcd2e2;
   --red-dark: #e60258;
   --green: #04ab57;
+  --green-dark: #03994e;
   --green-light: #bffbdd;
 }
 
 @font-face { font-family: 'avenir-bold'; src: url('../fonts/avenir-bold.ttf'); }
 @font-face { font-family: 'montserrat'; src: url('../fonts/montserrat.otf'); }
-	
+ 
 .under-construction  { width: calc(100% - 5px); margin-bottom: 20px; font-size: 22px important!; padding: 20px; background: var(--yellow); color: var(--white);  font-family: 'avenir-bold'; }
 
 * { margin: 0; padding: 0; font-family: 'montserrat'; color: var(--black); font-size: 16px; font-weight: normal; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; transition: all 0.2s ease;  }
+* { -webkit-font-smoothing: subpixel-antialiased; -moz-font-smoothing: subpixel-antialiased; -o-font-smoothing: subpixel-antialiased; }
 *:focus { outline: none; }
 *::-moz-selection { background: var(--yellow); }
 ::selection  { background: var(--yellow); }
 *::before {  box-sizing: border-box; }
 *::after { box-sizing: border-box; }
 
+#form_start { position: relative; top: 0; }
 body { background: var(--grey-1); }
 h1 { font-family: 'avenir-bold'; color: var(--blue-dark); font-size: 34px; margin: 10px 0; }
 h2 { font-family: 'avenir-bold'; color: var(--blue-light); padding-bottom: 5px; font-size: 22px; }
@@ -38,10 +43,10 @@ h2:not(:first-of-type) { padding-top: 20px; }
 hr { margin-bottom: 50px; border: 2px solid var(--blue-dark); background: var(--blue-dark); }
 hr.blue-light { background:  var(--blue-light); border: 1px solid  var(--blue-light); margin: 0; margin-bottom: 20px; }
 code { font-family: "Lucida Console", "Courier New", monospace; font-size: 14px;}
-.rounded { border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
+.rounded { border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 
 a.link-main:link, a.link-main:visited, a.link-main:active { font-size: 16px; position: relative; overflow: hidden; text-decoration: none; color: var(--black); }
-a.link-main::after { content: ""; background: var(--blue-pale); position: absolute; left: 0; bottom: -6px; width: 100%; height: calc(100% - 8px); z-index: -1; transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05); }
+a.link-main::after { content: ""; background: var(--blue-pale); position: absolute; left: 0; bottom: -2px; width: 100%; height: calc(100% - 8px); z-index: -1; transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05); }
 a.link-main:hover:after { left: 0; bottom: -2px; width: 100%; height: 100%; }
 	  
 a.link-white:link, a.link-white:visited, a.link-white:active { color: var(--white); text-decoration: none; font-size: 16px; font-weight: normal; }
@@ -61,19 +66,19 @@ FORM
 ::-ms-input-placeholder { color: var(--blue-pale);  }
 input { font-family: inherit; border: none; padding: 0 10px; margin-top: 10px; }
 input:focus { outline: none; background: var(--blue-light); color: var(--white); }
-input { height: 40px; border-radius: 10px; -moz-border-radius: 10px;  -webkit-border-radius: 10px; }
+input { height: 40px; border-radius: 5px; -moz-border-radius: 5px;  -webkit-border-radius: 5px; }
 input[type=checkbox] { height: 24px; width: 24px; }
 input[type=text]:disabled { background: var(--grey-3); }
-button { background: var(--blue-dark); color: var(--white); height: 40px; padding: 0 20px; margin-top: 10px; border: 0; cursor: pointer; border-radius: 10px; -moz-border-radius: 10px;  -webkit-border-radius: 10px; }
+button { background: var(--blue-dark); color: var(--white); height: 40px; padding: 0 20px; margin-top: 10px; border: 0; cursor: pointer; border-radius: 5px; -moz-border-radius: 5px;  -webkit-border-radius: 5px; }
 button.btn-warning { background: var(--yellow); }
-button:hover { background: var(--blue-light); }
-textarea { font-family: inherit; resize: vertical; min-height: 100px; border: none; padding: 10px; margin-top: 10px; border-radius: 10px; -moz-border-radius: 10px;  -webkit-border-radius: 10px; }
+button:hover { background: var(--blue-dark-dark); }
+textarea { font-family: inherit; resize: vertical; min-height: 100px; border: none; padding: 10px; margin-top: 10px; border-radius: 5px; -moz-border-radius: 5px;  -webkit-border-radius: 5px; }
 textarea:focus { outline: none; background: var(--blue-light); color: var(--white); }
 
 select { appearance: none; background-color: transparent; border: none; padding: 0; margin: 0; width: 100%; font-family: inherit; font-size: inherit; cursor: inherit; line-height: inherit; outline: none; }
 select::-ms-expand { display: none; }
 select { padding: 0 10px; }
-.select { position: relative; width: 100%; height: 40px; cursor: pointer; line-height: 40px; background-color: var(--white); border-radius: 10px; -moz-border-radius: 10px;  -webkit-border-radius: 10px; }
+.select { position: relative; width: 100%; height: 40px; cursor: pointer; line-height: 40px; background-color: var(--white); border-radius: 5px; -moz-border-radius: 5px;  -webkit-border-radius: 5px; }
 .select img { position: absolute; right: 0px; }
  
 .preloader { align-items: center; background: var(--grey-1); display: flex; height: 100vh; justify-content: center; left: 0; position: fixed; top: 0; transition: opacity 0.3s linear; width: 100%; z-index: 9999; }
@@ -82,6 +87,7 @@ select { padding: 0 10px; }
 
 div.content { line-height: 24px; margin-bottom: 40px; }
 div.content ul { padding-left: 20px; }
+div.content li { line-height: 24px; }
 div.info { background: var(--blue-pale); padding: 20px; }
 
 /******************************************************************************
@@ -117,7 +123,7 @@ MENÜ
 .nav-frame .link { color: var(--white); text-decoration: none; font-size: 16px; }
 .nav-frame img.avatar { width: 30px; height: 30px; border-radius: 15px; -moz-border-radius: 15px; -webkit-border-radius: 15px; position: relative; top: 5px; left: -5px; }
 .nav-frame .nav  .user-menu-items { position: absolute; right: 0; background: var(--blue-medium); width: 200px; sborder-top: 5px solid var(--blue-light); top: 42px; overflow: hidden; 
-	border-bottom-left-radius: 10px; -moz-border-bottom-left-radius: 10px;  -webkit-border-bottom-left-radius: 10px; border-bottom-right-radius: 10px; -moz-border-bottom-right-radius: 10px;  -webkit-border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 5px; -moz-border-bottom-left-radius: 5px;  -webkit-border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; -moz-border-bottom-right-radius: 5px;  -webkit-border-bottom-right-radius: 5px;
 	transition:max-height 0.3s ease-out; height:auto; max-height:600px; }
 .nav-frame .nav .user-menu-items .border { height: 5px; background: var(--blue-light); }
 .nav-frame .nav .user-menu-items.collapsed { max-height:0; }
@@ -132,7 +138,7 @@ MENÜ
 CONTENT
 ******************************************************************************/
 
-.content-frame { width: 1015px; margin: 0 auto; padding-top: 40px; }
+.content-frame { width: 1015px; margin: 0 auto; padding-top: 40px; font-weight: thin; }
 
 /******************************************************************************
 FOOTER
@@ -153,24 +159,27 @@ FOOTER
 MESSAGES
 ******************************************************************************/
 /*
-.message-error { background: var(--red); padding: 20px; margin-bottom: 20px; border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
+.message-error { background: var(--red); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 .message-error div { color: var(--white); }
 
-.message-warning { background: var(--yellow); padding: 20px; margin-bottom: 20px; border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
+.message-warning { background: var(--yellow); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 .message-warning div { color: var(--white); }
 
-.message-success { background: var(--green); padding: 20px; margin-bottom: 20px; border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
+.message-success { background: var(--green); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 .message-success div { color: var(--white); }
 */
 
-.message-error { background: #fcd2e2; padding: 20px; margin-bottom: 20px; border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
+.message-error { background: #fcd2e2; padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 .message-error div { color: var(--red); }
 
-.message-warning { background: var(--yellow-light); padding: 20px; margin-bottom: 20px; border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
+.message-warning { background: var(--yellow-light); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 .message-warning div { color: var(--yellow); }
 
-.message-success { background: var(--green-light); padding: 20px; margin-bottom: 20px; border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
+.message-success { background: var(--green-light); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 .message-success div { color: var(--green); }
+
+.message-warning-dark { background: var(--yellow); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
+.message-warning-dark div { color: var(--white); }
 
 /********************************************************************************
 MEDIA
@@ -232,5 +241,9 @@ MAX 480
 	.footer-frame { width: 100%; overflow: hidden; }
 	.footer-frame .bottom div .left { text-align: left; width: 100%; position: relative; }
 	.footer-frame .bottom div .left div:nth-child(2) { left: 30px; }
-	.footer-frame .bottom div .right {text-align: left; width: 100%; position: relative; margin-top: 10px;; right: 0; }
+	.footer-frame .bottom div .right {text-align: left; width: 100%; position: relative; margin-top: 10px; right: 0; }
+	
+	.footer-frame .top div { width: 100%; }
+	.footer-frame .top div .left { width: 50%; }
+	.footer-frame .top div .right { width: 50%; }
 }
